--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8507,7 +8507,7 @@ textarea.form-control {
     content: '';
     z-index: -1;
     opacity: 1;
-    background: #8d703b; }
+    background: #2c3e50; }
 
 .ftco-counter {
   padding: 7em 0; }
