edited some pages

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9108,3 +9108,5 @@ textarea.form-control {
   100% {
     stroke-dasharray: 89, 200;
     stroke-dashoffset: -136px; } }
+.fw-600 {
+  font-weight: 600 !important; }
