--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7297,7 +7297,7 @@ h1, h2, h3, h4, h5,
   font-family: "Playfair Display", Arial, serif; }
 
 .text-primary {
-  color: #8d703b !important; }
+  color: #2c3e50 !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
